tests/ui/never_type/issue-5500-1.stderr
error[E0308]: mismatched types
  --> $DIR/issue-5500-1.rs:10:18
   |
LL |     _iter.node = &panic!()
   |     ----------   ^^^^^^^^^ expected `&usize`, found `&!`
   |     |
   |     expected due to the type of this binding
   |
   = note: expected reference `&usize`
              found reference `&!`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
